# Drone-Power-predict

./: .gitignore  main.py  pyproject.toml
eda/: DECS.md  convert.ipynb  flight_DESC.md  flight_stat.ipynb  optimize.ipynb  stat.ipynb  train.ipynb  train1.ipynb
eda/docs/: flow.md
eda/duration_s/: optimize.ipynb  time_stat.ipynb  train.ipynb
src/config/: log_files.py  path.py
src/utils/: cli.py  files.py
web/: drone_fleet_sim.html  main.html  scripts.js  style.css
