[project]
name = "adym2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "optuna>=4.9.0",
    "optuna-integration>=4.9.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "scikit-learn-intelex>=2026.1.0",
    "seaborn>=0.13.2",
    "xgboost>=3.3.0",
]

[project.scripts]
tool = "src.utils.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]


